<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name" />

    <EditText
        android:id="@+id/employee_input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/id"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1" />

    <EditText
        android:id="@+id/employee_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/new_employee_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/employee_input_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/new_employee_position"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />
    <EditText
        android:id="@+id/employee_input_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/new_employee_salary"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete" />

    <Button
        android:id="@+id/add_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:text="@string/add_employee" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/employees_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_weight="1" >
        <!-- elementos -->
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/buttonBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit" />

</LinearLayout>
